tests/snapshots/test_report__categories_to_polars_converts_milliunits.snap
---
source: tests/test_report.rs
expression: dataframe_snapshot(&df)
---
shape: (4, 5)
columns: [category_name, category_group_name, budgeted, balance, goal_cadence]
0: ["Groceries", "Essentials", 50.0, 31.5, "monthly"]
1: ["Rent", "Essentials", 100.0, 75.0, "annual"]
2: ["Books", "Fun", 10.0, 6.0, "annual"]
3: ["Games", "Fun", 20.0, 17.0, "annual"]
