tests/snapshots/test_report__category_group_totals_include_balance_without_spending.snap
---
source: tests/test_report.rs
expression: "format!(\"{df}\")"
---
shape: (2, 4)
┌─────────────────────┬──────────┬───────┬─────────┐
│ category_group_name ┆ budgeted ┆ spent ┆ balance │
│ ---                 ┆ ---      ┆ ---   ┆ ---     │
│ str                 ┆ f64      ┆ f64   ┆ f64     │
╞═════════════════════╪══════════╪═══════╪═════════╡
│ Essentials          ┆ 70.0     ┆ -12.5 ┆ 120.0   │
│ Total               ┆ 70.0     ┆ -12.5 ┆ 120.0   │
└─────────────────────┴──────────┴───────┴─────────┘
