tests/snapshots/test_report__category_group_totals_match_rows.snap
---
source: tests/test_report.rs
expression: "format!(\"{df}\")"
---
shape: (3, 4)
┌─────────────────────┬──────────┬───────┬─────────┐
│ category_group_name ┆ budgeted ┆ spent ┆ balance │
│ ---                 ┆ ---      ┆ ---   ┆ ---     │
│ str                 ┆ f64      ┆ f64   ┆ f64     │
╞═════════════════════╪══════════╪═══════╪═════════╡
│ Essentials          ┆ 150.0    ┆ -43.5 ┆ 106.5   │
│ Fun                 ┆ 30.0     ┆ -7.0  ┆ 23.0    │
│ Total               ┆ 180.0    ┆ -50.5 ┆ 129.5   │
└─────────────────────┴──────────┴───────┴─────────┘
