tests/snapshots/test_report__split_transactions_are_counted_per_category.snap
---
source: tests/test_report.rs
expression: dataframe_snapshot(&df)
---
shape: (2, 6)
columns: [category_group_name, category_name, budgeted, spent, balance, goal_cadence]
0: ["Essentials", "Groceries", 50.0, -12.5, 30.0, "monthly"]
1: ["Essentials", "Savings", 20.0, -7.5, 90.0, "monthly"]
