tests/snapshots/test_report__transactions_with_no_category_are_filtered.snap
---
source: tests/test_report.rs
expression: dataframe_snapshot(&df)
---
shape: (1, 4)
columns: [date, amount, payee_name, category_name]
0: [2024-03-12, -3.0, "Store", "Groceries"]
